Final update: -fixed border overlap

--- a/L06 Flexbox/Q04 Flexbox Calendar/style.css
+++ b/L06 Flexbox/Q04 Flexbox Calendar/style.css
@@ -29,6 +29,7 @@ html {
 .workweek .title{
     width: 45em;
     padding:  1.5em 22.5em 5.5em 22.5em;
+    border-top: solid black 1px;
 }
 
 .workweek p{
@@ -38,6 +39,8 @@ html {
     justify-content: center;
     align-items: flex-start;
     border: solid black 1px;
+    border-top: 0px;
+    border-right: 0px;
 }
 
 .weekend{
@@ -58,6 +61,8 @@ html {
     justify-content: center;
     align-items: flex-start;
     border: solid black 1px;
+    border-right: 0px;
+    border-top: 0px;
     display: flex;
 }
 
@@ -76,6 +81,6 @@ html {
     border: solid black 1px;
 }
 
-.notes p:first-of-type{
-    border-bottom: 0px;
+.notes p:last-of-type{
+    border-top: 0px;
 }
